lose focus on click bug and adjust search element and styling for iphone
when you type in the search box and click back the text of the input
is clipped on iphone. This seems to be because Safari adds padding to
default styling.

also fix issue where iphone/safari lose focus on click
on clicking on the search area in safari/iphone the search box
loses focus and the user must click again before typing
this appears to be a glitch in Safari
this can be remedied by changing the search input type from text
to search

--- a/stylesheets/beta_common.css
+++ b/stylesheets/beta_common.css
@@ -193,6 +193,7 @@ a.search-result-item {
 	outline-width: initial;
 	outline-color: initial;
 	height: 1.4em;
+	padding: 0;
 }
 
 ul#footer-info {
